WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156162
[css-grid] Fix positioned children in RTL
https://bugs.webkit.org/show_bug.cgi?id=156162
Summary
[css-grid] Fix positioned children in RTL
Manuel Rego Casasnovas
Reported
2016-04-04 02:20:21 PDT
[css-grid] Fix positioned children in RTL
Attachments
Patch
(24.08 KB, patch)
2016-04-04 02:22 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Patch for landing
(24.03 KB, patch)
2016-04-06 02:31 PDT
,
Manuel Rego Casasnovas
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Manuel Rego Casasnovas
Comment 1
2016-04-04 02:22:11 PDT
Created
attachment 275540
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2016-04-04 02:23:38 PDT
This is a port of:
https://codereview.chromium.org/1841073002/
Sergio Villar Senin
Comment 3
2016-04-06 02:18:56 PDT
Comment on
attachment 275540
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275540&action=review
> LayoutTests/fast/css-grid-layout/grid-positioned-items-background-rtl-expected.html:2 > +<html>
Remove <html> and <body> tags which are not needed
> LayoutTests/fast/css-grid-layout/grid-positioned-items-background-rtl.html:2 > +<html>
Ditto.
Manuel Rego Casasnovas
Comment 4
2016-04-06 02:31:09 PDT
Created
attachment 275763
[details]
Patch for landing
Manuel Rego Casasnovas
Comment 5
2016-04-06 02:32:34 PDT
Comment on
attachment 275763
[details]
Patch for landing Thanks for the review, applied suggested changes.
WebKit Commit Bot
Comment 6
2016-04-06 03:22:03 PDT
Comment on
attachment 275763
[details]
Patch for landing Clearing flags on attachment: 275763 Committed
r199098
: <
http://trac.webkit.org/changeset/199098
>
WebKit Commit Bot
Comment 7
2016-04-06 03:22:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug